--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,8 +5,8 @@ git {
 app {
   host: 0.0.0.0
   port: 8080
-  idleTimeout: 11000
-  requestTimeout: 10000
-  responseTimeout: 9000
+  idleTimeoutInSec: 11000
+  requestTimeoutInSec: 10000
+  responseTimeoutInSec: 9000
 
 }
